final product page
final product page

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>متجر عربي</title>
+        <script type="text/html" src="{require('index.js')}"></script>
 
     </head>
     <body>
@@ -813,7 +814,7 @@
                             </div>
                         </div>
                         <ol class="carousel-indicators
-                            custom-carousel-indicator">
+                            custom-carousel-indicator" style="position: static;">
                             <li data-target="#carousel-most-sold"
                                 data-slide-to="0" class="active">
 
